<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:theme="@style/Theme.MaterialComponents.NoActionBar"
    tools:context=".Login">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/shadow"
        android:layout_marginTop="30dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/name_font"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/flags_and_capitals"
        android:textColor="@color/fontColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="330dp"
        android:layout_height="65dp"
        android:layout_marginTop="100dp"
        android:pointerIcon="text"
        android:textColorHint="#370617"
        app:boxStrokeColor="@color/fontColor"
        app:hintTextColor="#370617"
        app:layout_constraintEnd_toEndOf="parent"
        app:errorEnabled="true"
        app:boxStrokeErrorColor="@color/strokeWrongColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autoSizeMinTextSize="20sp"
            android:autoSizeTextType="uniform"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="#370617"
            android:textSize="20sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="330dp"
        android:layout_height="65dp"
        android:layout_marginTop="50dp"
        android:pointerIcon="text"
        android:textColorHint="#370617"
        app:boxStrokeColor="@color/fontColor"
        app:hintTextColor="#370617"
        app:errorEnabled="true"
        app:boxStrokeErrorColor="@color/strokeWrongColor"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autoSizeMinTextSize="20sp"
            android:autoSizeTextType="uniform"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:lines="1"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="#370617"
            android:textSize="20sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/email_login"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginBottom="40dp"
        android:autoSizeMaxTextSize="20sp"
        android:autoSizeTextType="uniform"
        android:background="@drawable/login"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center|center_horizontal|center_vertical"
        android:onClick="login"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:visibility="visible"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/make_new"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/make_new"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_marginBottom="30dp"
        android:autoSizeMaxTextSize="35sp"
        android:autoSizeMinTextSize="15sp"
        android:autoSizeTextType="uniform"
        android:clickable="true"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:onClick="create"
        android:padding="5dp"
        android:text="@string/no_account_create_new"
        android:textColor="@android:color/secondary_text_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>